# Conversor_Arquivos

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  utils.py  validators.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/outputs/: curriculo.docx  data.csv  data.xlsx  teste.docx  teste.txt
backend/app/routes/: document_converter.py  image_converter.py  spreadsheet_converter.py
backend/app/services/: document_service.py  image_service.py  spreadsheet_service.py
backend/test/test_routes/: test_document_converter.py  test_image_converter.py  test_spreadsheet_converter.py
backend/test/test_services/: test_document_service.py  test_image_service.py  test_spreadsheet_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ConverterCard.jsx  FileUpload.jsx  Navbar.jsx
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js
