[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Juan Amcis Paiva <juanpaiva887@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.45.0"}
python-multipart = "^0.0.26"
pillow = "^12.2.0"
reportlab = "^4.4.10"
pdf2image = "^1.17.0"
pandas = "^3.0.2"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
pdfplumber = "^0.11.9"
python-magic = "^0.4.27"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
